Fixed (1) selecting the change table (when switching between views, switch the css display property between 'none' and 'table'), (2) header in the change list disappearing/overlapping.

--- a/src/main/resources/css/cdpipeline.css
+++ b/src/main/resources/css/cdpipeline.css
@@ -794,20 +794,22 @@ input[type="text"]:focus {
 --------------------------*/
 .changes-page {
 	position: relative;
-	top: 10%;
+	top: 60px;
 	left: 5%;
 	height: 90%;
 	width: 90%;
 	overflow: scroll;
-	padding: 10px;
+	padding: 20px;
 }
 
 .change-header {
 	position: fixed;
-	top: 30px;
+	top: 1px;
+	padding-top: 30px;
 	left: 5%;
 	width:90%;	
-	z-index: 3;
+	z-index: 3;	
+	background: #f5f5f5;
 }
 
 .change-header plan {
@@ -1026,11 +1028,11 @@ p {
 }
 
 #table-view-button {
-	top: 120px;
+	top: 121px;
 }
 
 #select-table-button {
-	top: 160px;
+	top: 162px;
 }
 
 #changes-window button:disabled {
